Add immediate versions of shift/rotate packed immediate instructions.
- Forgot to add these earlier.
- 4 bit immediate shift/rotate left/right.

 On branch spec/draft-3
 Changes to be committed:
	modified:   docs/crypto-ise.changelog.tex
	modified:   docs/crypto-ise.specification.tex

 Untracked files:
	external/

--- a/docs/crypto-ise.changelog.tex
+++ b/docs/crypto-ise.changelog.tex
@@ -12,6 +12,8 @@
     the instruction, then they are called the same thing.
 \item Add BOP.cr instruction, and make XOR/AND/OR.cr instructions
     alias specific encodings of this BOP.cr.
+\item Add shift/rotate by immediate versions of the packed
+    shift and rotate instructions.
 \end{itemize}
 
 \paragraph{Draft-2}
