--- a/docs/crypto-ise.tex
+++ b/docs/crypto-ise.tex
@@ -5,6 +5,8 @@
 \usepackage{biblatex}
 \addbibresource{references.bib}
 
+\import{../work/}{crypto-ise.encodings.tex}
+
 \title{SCARV: RISC-V Crypto ISE}
 
 \begin{document}
