Add LMIX.cr and RMIX.cr instructions.
- Allows arbitrary mixing of bits in rotated source and destination
  register based on a mask in a source register.

 On branch spec/draft-4
 Changes to be committed:
	modified:   bin/ise-parse-opcodes.py
	modified:   docs/crypto-ise.specification.tex
	modified:   docs/ise-opcodes.txt
	modified:   docs/shared.sty

--- a/docs/crypto-ise.specification.tex
+++ b/docs/crypto-ise.specification.tex
@@ -280,9 +280,9 @@ bytes within words.
 
 \subsubsection{Bitwise Instructions}
 
-\paragraph{BOP.cr}
+\instdesc{BOP.cr}
 
-The \ASM{BOP.cr} is designed to express all bitwise logic functions, and be
+The \instref{BOP.cr} is designed to express all bitwise logic functions, and be
 amenable to bit-sliced implementations of cryptographic functions.
 
 \begin{itemize}
@@ -293,7 +293,7 @@ amenable to bit-sliced implementations of cryptographic functions.
 }
 \end{itemize}
 
-\ASM{BOP.cr} takes a 4-bit immediate {\tt lut4}, and uses the concatenated
+\instref{BOP.cr} takes a 4-bit immediate {\tt lut4}, and uses the concatenated
 $i$'th bits of register inputs $\GPR[*][rs1]$ and  $\GPR[*][rs2]$
 as the inputs, writing the output bit of the lut to the $i$'th bit of the
 destination register.
@@ -302,6 +302,58 @@ destination register.
     implementation will end up with a 32-port LUT, with correspondingly
     poor timing performance.
 }
+
+\instdesc{MIX.cr}
+
+The \instref{MIX.cr} instruction allows an arbitrary bit-wise mixing of two
+register values, using a mask stored in a third register. It first rotates 
+the source register value in {\tt rs1} by the ammount in shamt, and then mixes
+the rotated value and the source value according to the mask value in
+{\tt rs2}.
+
+\ASM{RMIX.cr} will rotate the the value in {\tt rs1} to the right by $0..15$,
+while \ASM{LMIX.cr} will rotate to the left by the same amounts.
+\designnote{This decision was made simply to make the encoding space
+easier to manage. Rather than adding another 5-bit immediate field, it was
+more efficient to re-use the 4-bit lut field of the \instref{BOP.cr}
+instruction.}
+
+\begin{itemize}
+\item \INST{RMIX.cr rd, rs1, rs2,shamt}{
+    $t_0 \ASN \CPR[*][rs1] \RRT shamt $\\
+    $\forall i \in {0..31}$
+    $    \CPR[*][rd][i] \ASN \CPR[*][rs2][i] ? t_0[i] : \CPR[*][rd][i]$
+}
+\item \INST{LMIX.cr rd, rs1, rs2,shamt}{
+    $t_0 \ASN \CPR[*][rs1] \LRT shamt $\\
+    $\forall i \in {0..31}$
+    $    \CPR[*][rd][i] \ASN \CPR[*][rs2][i] ? t_0[i] : \CPR[*][rd][i]$
+}
+\end{itemize}
+
+\ASM{MIX.cr} allows us to create any mix of bits from two registers
+using a single 3-instruction sequence:
+
+\begin{lstlisting}[style=float]
+LUI.cr   c0, 0xF0F0     // Load a mask into c0 which will select
+ORI.cr   c0, 0xF0F0     // alternate nibbles from each register
+LMIX.cr  c2, c1, c0, 0  // Odd nibbles from c1, even nibbles from c2.
+LMIX.cr  c3, c1, c0, 4  // Even nibbles from c1, even nibbles from c3.
+RMIX.cr  c4, c1, c0, 4  // Odd  nibbles from c1, even nibbles from c3.
+\end{lstlisting}
+
+We can also use it to create insert and deposit style instruction
+sequences.
+
+\begin{lstlisting}[style=float]
+LUI.cr   c0, 0x0000     // Load a mask into c0 to select
+ORI.cr   c0, 0x7800     // bits 10:7 from a register
+RMIX.cr  c2, c1, c0, 8  // c2[10:7] <- c1[19:15]
+
+LUI.cr   c0, 0x0000     // Mask to select top 7 bits of 
+ORI.cr   c0, 0x000E     // byte 0
+LMIX.cr  c2, c1, c0, 16 // c2[7:1] <- c1[23:17]
+\end{lstlisting}
 
 \subsubsection{Multi-precision Arithmetic}
 
