--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -40,6 +40,8 @@
 \newcommand{\encopcode}{$0101011$}
 
 \newcommandx{\ASM}[1]{{\tt #1}}
+\newcommandx{\instref}[1]{{\tt \nameref{sec:#1}}}
+\newcommandx{\instdesc}[1]{\paragraph{#1}\label{sec:#1}}
 
 % Shorter bit box commands for encoding description
 \newcommandx{\BB}[2]{\bitbox{#1}{{\tt #2}}}
